# woolpilot

./: .gitignore  README.md  pyproject.toml  requirements.txt
src/woolpilot/: cli.py  models.py  storage.py
src/woolpilot/parsers/: base.py  utils.py  wollplatz.py
src/woolpilot/providers/: base.py  browser.py  http.py  wollplatz.py
tests/: test_woolpilot.py  tests.py
