[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "woolpilot"
version = "0.1.0"
description = "MARKT-PILOT coding challenge scraper"
readme = "README.md"
requires-python = ">=3.9.6"
dependencies = []

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
